# dictionary_builder_api

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: Sanitizers.cmake
configured/: CMakeLists.txt  server_config.hpp.in
src/: CMakeLists.txt
src/common/: CMakeLists.txt  WordDto.cpp  WordDto.hpp
src/database/sql/: 001_init.sql
